package com.example.task4.model;

public interface Aggregate {
    public Iterator getIterator();
}
