package com.example.task4.model;

public interface Iterator {

    public boolean hasNext(int x);
    public Object next();
    public Object preview();

}
