@startuml

title __TASK4's Class Diagram__\n

  namespace  {
    namespace om.example.task4 {
      class com.example.task4.HelloApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.task4 {
      class com.example.task4.HelloController {
      }
    }
  }
  

  namespace  {
    namespace om.example.task4 {
      namespace model {
        interface com.example.task4.model.Aggregate {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.task4 {
      namespace model {
        class com.example.task4.model.ConcreteAggregate {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.task4 {
      namespace model {
        interface com.example.task4.model.Iterator {
        }
      }
    }
  }
  

  com.example.task4.HelloApplication -up-|> javafx.application.Application
  com.example.task4.HelloController .up.|> javafx.fxml.Initializable
  com.example.task4.HelloController o-- com.example.task4.model.ConcreteAggregate : conaggr
  com.example.task4.HelloController o-- com.example.task4.model.Iterator : iter
  com.example.task4.model.ConcreteAggregate .up.|> com.example.task4.model.Aggregate


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
